mostly: added the executor service for parallel execution